fixed layout issues

--- a/bootstrap/resources/css/app.css
+++ b/bootstrap/resources/css/app.css
@@ -31,7 +31,7 @@ a:link {
 
 .header-title
 {
-    position : relative;
+    position : absolute;
     top:30px;
     left:20px;
 }
